Removed old activators New interceptor support Application not working